# failed-chip8-project

./: CMakeLists.txt  chip8.c  chip8.h  main.h
src/: chip.c  chip.h  chip8.c  chip8.h  main.c  main.h
